Implement runs test

--- a/diagnostics.ipynb
+++ b/diagnostics.ipynb
@@ -9,20 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import floor\n",
+    "from math import floor, sqrt\n",
+    "import itertools\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import chi2"
+    "import pandas as pd\n",
+    "from scipy.stats import chi2, uniform, kstest, norm\n",
+    "import statsmodels.api as sm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +38,7 @@
        "       [7.70150115e-01, 6.91363839e-01, 3.24024402e-01]])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,33 +293,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chi-square critical value (alpha=0.05 and df=24): 36.41502850180731\n",
-      "L'Ecuyer test statistic: 18.01; Reject H0: False\n",
-      "Mersenne Twister test statistic: 18.68; Reject H0: False\n",
-      "Tausworthe test statistic: 18.68; Reject H0: False\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RNG</th>\n",
+       "      <th>Chi-square Statistic</th>\n",
+       "      <th>Critical Value</th>\n",
+       "      <th>p-value</th>\n",
+       "      <th>Reject</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>L'Ecuyer</td>\n",
+       "      <td>18.01</td>\n",
+       "      <td>36.415029</td>\n",
+       "      <td>0.802523</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mersenne Twister</td>\n",
+       "      <td>18.68</td>\n",
+       "      <td>36.415029</td>\n",
+       "      <td>0.768833</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tausworthe</td>\n",
+       "      <td>4.97</td>\n",
+       "      <td>36.415029</td>\n",
+       "      <td>0.999988</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                RNG  Chi-square Statistic  Critical Value   p-value  Reject\n",
+       "0          L'Ecuyer                 18.01       36.415029  0.802523   False\n",
+       "1  Mersenne Twister                 18.68       36.415029  0.768833   False\n",
+       "2        Tausworthe                  4.97       36.415029  0.999988   False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "n_bins = 25\n",
     "chisq_lecuyer = calculate_chisq(x_lecuyer, n_bins)\n",
     "chisq_mersenne = calculate_chisq(x_mersenne, n_bins)\n",
-    "chisq_tausworthe = calculate_chisq(x_mersenne, n_bins)\n",
+    "chisq_tausworthe = calculate_chisq(x_tausworthe, n_bins)\n",
     "\n",
     "alpha = 0.05\n",
     "crit = chi2.ppf(1-alpha, n_bins-1)\n",
     "\n",
-    "print(f'Chi-square critical value (alpha={alpha} and df={n_bins-1}): {crit}')\n",
-    "print(f'L\\'Ecuyer test statistic: {chisq_lecuyer}; Reject H0: {chisq_lecuyer > crit}')\n",
-    "print(f'Mersenne Twister test statistic: {chisq_mersenne}; Reject H0: {chisq_mersenne > crit}')\n",
-    "print(f'Tausworthe test statistic: {chisq_tausworthe}; Reject H0: {chisq_tausworthe > crit}')"
+    "pval_lecuyer = 1-chi2.cdf(chisq_lecuyer, n_bins-1)\n",
+    "pval_mersenne = 1-chi2.cdf(chisq_mersenne, n_bins-1)\n",
+    "pval_tausworthe = 1-chi2.cdf(chisq_tausworthe, n_bins-1)\n",
+    "\n",
+    "pd.DataFrame({\n",
+    "  'RNG' : ['L\\'Ecuyer', 'Mersenne Twister', 'Tausworthe'],\n",
+    "  'Chi-square Statistic': [chisq_lecuyer, chisq_mersenne, chisq_tausworthe],\n",
+    "  'Critical Value': [crit] * 3,\n",
+    "  'p-value': [pval_lecuyer, pval_mersenne, pval_tausworthe],\n",
+    "  'Reject': [chisq_lecuyer > crit, chisq_mersenne > crit, chisq_tausworthe > crit]\n",
+    "})"
    ]
   },
   {
@@ -324,6 +392,278 @@
    "metadata": {},
    "source": [
     "Fail to reject $H_0$ and conclude good fit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternate test using statsmodels package\n",
+    "\n",
+    "def calculate_chisq2(data, n_bins):\n",
+    "  E = [len(data) / n_bins] * n_bins\n",
+    "  O = [0] * n_bins\n",
+    "\n",
+    "  for obs in data:\n",
+    "    i = floor(obs * n_bins)\n",
+    "    if i == n_bins: i -= 1\n",
+    "    O[i] += 1\n",
+    "\n",
+    "  return sm.stats.gof.powerdiscrepancy(O, E, lambd=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RNG</th>\n",
+       "      <th>Chi-square Statistic</th>\n",
+       "      <th>p-value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>L'Ecuyer</td>\n",
+       "      <td>18.01</td>\n",
+       "      <td>0.802523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mersenne Twister</td>\n",
+       "      <td>18.68</td>\n",
+       "      <td>0.802523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tausworthe</td>\n",
+       "      <td>18.68</td>\n",
+       "      <td>0.999988</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                RNG  Chi-square Statistic   p-value\n",
+       "0          L'Ecuyer                 18.01  0.802523\n",
+       "1  Mersenne Twister                 18.68  0.802523\n",
+       "2        Tausworthe                 18.68  0.999988"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gof_lecuyer = calculate_chisq2(x_lecuyer, n_bins)\n",
+    "gof_mersenne = calculate_chisq2(x_mersenne, n_bins)\n",
+    "gof_tausworthe = calculate_chisq2(x_tausworthe, n_bins)\n",
+    "\n",
+    "pd.DataFrame({\n",
+    "  'RNG' : ['L\\'Ecuyer', 'Mersenne Twister', 'Tausworthe'],\n",
+    "  'Chi-square Statistic': [gof_lecuyer[0], gof_mersenne[0], gof_mersenne[0]],\n",
+    "  'p-value': [gof_lecuyer[1], gof_lecuyer[1], gof_tausworthe[1]],\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same results from statsmodels test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KstestResult(statistic=np.float64(0.013976515745905194), pvalue=np.float64(0.28016633013657055), statistic_location=np.float64(0.3368234842540948), statistic_sign=np.int8(1))\n",
+      "KstestResult(statistic=np.float64(0.010424446273693988), pvalue=np.float64(0.6449273869895829), statistic_location=np.float64(0.658775553726306), statistic_sign=np.int8(1))\n",
+      "KstestResult(statistic=np.float64(0.006778178604692209), pvalue=np.float64(0.9745011267864127), statistic_location=np.float64(0.4298218213953078), statistic_sign=np.int8(1))\n"
+     ]
+    }
+   ],
+   "source": [
+    "ks_lecuyer = kstest(x_lecuyer, uniform.cdf, (0, 1))\n",
+    "ks_mersenne = kstest(x_mersenne, uniform.cdf, (0, 1))\n",
+    "ks_tausworthe = kstest(x_tausworthe, uniform.cdf, (0, 1))\n",
+    "\n",
+    "print(ks_lecuyer)\n",
+    "print(ks_mersenne)\n",
+    "print(ks_tausworthe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same results from Kolmogorov-Smirnov."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Independence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def updown_runs_test(data):\n",
+    "  run_list = []\n",
+    "  for i in range(1, len(data)):\n",
+    "    run_list.append(data[i] > data[i-1])\n",
+    "\n",
+    "  \n",
+    "  A = len([a for a, _ in itertools.groupby(run_list)])\n",
+    "  mu = 2*len(data)/3\n",
+    "  var = 16*len(data)/90\n",
+    "  sd = sqrt(var)\n",
+    "  Z0 = (A-mu) / sd\n",
+    "\n",
+    "  alpha = 0.05\n",
+    "  crit = norm.ppf(1-(alpha/2), loc=0, scale=1)\n",
+    "\n",
+    "  p = 2*(1-norm.cdf(abs(A), loc=0, scale=1))\n",
+    "\n",
+    "  return A, mu, var, Z0, crit, p, abs(Z0) > crit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RNG</th>\n",
+       "      <th># Runs</th>\n",
+       "      <th>E[# Runs]</th>\n",
+       "      <th>Var(# Runs)</th>\n",
+       "      <th>|Z Statistic|</th>\n",
+       "      <th>Critical Value</th>\n",
+       "      <th>p-value</th>\n",
+       "      <th>Reject</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>L'Ecuyer</td>\n",
+       "      <td>3323</td>\n",
+       "      <td>3333.333333</td>\n",
+       "      <td>888.888889</td>\n",
+       "      <td>-0.346591</td>\n",
+       "      <td>1.959964</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mersenne Twister</td>\n",
+       "      <td>3323</td>\n",
+       "      <td>3333.333333</td>\n",
+       "      <td>888.888889</td>\n",
+       "      <td>-0.346591</td>\n",
+       "      <td>1.959964</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tausworthe</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>3333.333333</td>\n",
+       "      <td>888.888889</td>\n",
+       "      <td>0.156525</td>\n",
+       "      <td>1.959964</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                RNG  # Runs    E[# Runs]  Var(# Runs)  |Z Statistic|  \\\n",
+       "0          L'Ecuyer    3323  3333.333333   888.888889      -0.346591   \n",
+       "1  Mersenne Twister    3323  3333.333333   888.888889      -0.346591   \n",
+       "2        Tausworthe    3338  3333.333333   888.888889       0.156525   \n",
+       "\n",
+       "   Critical Value  p-value  Reject  \n",
+       "0        1.959964      0.0   False  \n",
+       "1        1.959964      0.0   False  \n",
+       "2        1.959964      0.0   False  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "updown_runs_lecuyer = updown_runs_test(x_lecuyer)\n",
+    "updown_runs_mersenne = updown_runs_test(x_mersenne)\n",
+    "updown_runs_tausworthe = updown_runs_test(x_tausworthe)\n",
+    "\n",
+    "testresults = pd.DataFrame([updown_runs_lecuyer, updown_runs_mersenne, updown_runs_tausworthe], \n",
+    "                           columns=['# Runs', 'E[# Runs]', 'Var(# Runs)', '|Z Statistic|', 'Critical Value', 'p-value', 'Reject'])\n",
+    "testresults.insert(loc=0, column='RNG', value=['L\\'Ecuyer', 'Mersenne Twister', 'Tausworthe'])\n",
+    "testresults"
    ]
   }
  ],
